k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: june-ingress
  namespace: june-services
  annotations:
  cert-manager.io/cluster-issuer: letsencrypt-http

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.allsafe.world
    - idp.allsafe.world
    secretName: allsafe-tls
  rules:
  - host: api.allsafe.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: june-orchestrator
            port:
              number: 8080
  - host: idp.allsafe.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: june-idp
            port:
              number: 8080
